--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Mon fleuriste en ligne</title>
+	<title>My Bouquet of Flowers</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="css/style.css">
 </head>
